tests/tooling/fixtures/native/recovery/positive/class_nullability_alias_signature.objc3
module ClassNullabilityAliasSignature;

fn choose(flag: bool, maybe: Class?, always: Class!) -> Class {
  if (flag) {
    return maybe;
  }
  return always;
}

fn main() -> i32 {
  return choose(true, 33, 9) + 4;
}
